kubernetes/ingress/traefik-hostnetwork.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-system
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
  namespace: ingress-system
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      hostNetwork: true
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - "--api.insecure=true"
            - "--providers.kubernetesingress=true"
            - "--entrypoints.web.address=:80"
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
              protocol: TCP
