kubernetes/ingress/traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: ingress-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
      - name: traefik
        image: traefik:v2.10
        args:
          - "--providers.kubernetesingress=true"
          - "--providers.kubernetesingress.ingressclass=traefik"
          - "--entrypoints.web.address=:80"
          - "--entrypoints.web.forwardedHeaders.insecure=true"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: ingress-system
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
